# cursed_eyes

./: CMakeLists.txt  README.md
.docker/: Dockerfile.debian12slim  docker-compose.yaml
include/: eye.hh
src/: eye.cc  main.cc
